--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -27,18 +27,6 @@
 
 // Sidebar Navigation
 
-.sidebar			{
-	height: 100dvh;
-	width: $sidebar;
-	position: fixed;
-	top: 0;
-	left: 0;
-	@include b-pri(right);
-	@include mqx(large)	{
-		left: -#{$sidebar};
-	}
-}
-
 .logo-container		{
 	width: 100%;
 	height: 8rem;
@@ -58,7 +46,6 @@
 		@include fancy-line;
 	}
 	a 					{
-
 		@include fancy-text(1.2rem);
 	}
 }
