--- a/scss/utilities/_containers.scss
+++ b/scss/utilities/_containers.scss
@@ -2,6 +2,16 @@
 // Containers
 // ========================================
 
+.sidebar			{
+	height: 100%;
+	width: $sidebar;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	@include b-pri(right);
+}
+
 .main 				{
 	min-height: 100%;
 	@include mqm(large)	{
@@ -10,7 +20,6 @@
 }
 
 .main-inner			{
-	margin: 0 auto;
 	padding-left: 1rem;
 	padding-right: 1rem;
 	@include mqm(large)	{
